LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/GM_PARAMETERS__x.object-meta.xml
<CustomObject>
    <description>GM_PARAMETERS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_PARAMETERS</externalName>
    <label>GM_PARAMETERS</label>
    <pluralLabel>GM_PARAMETERS</pluralLabel>
</CustomObject>