LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/ACN_ID__c.field-meta.xml
<CustomField>
    <fullName>ACN_ID__c</fullName>
    <description>ACN_ID</description>
    <externalDeveloperName>ACN_ID</externalDeveloperName>
    <label>ACN_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>