LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/DEL_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>DEL_USER_ID__c</fullName>
    <description>DEL_USER_ID</description>
    <externalDeveloperName>DEL_USER_ID</externalDeveloperName>
    <label>DEL_USER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>