LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/IS_MANDATORY__c.field-meta.xml
<CustomField>
    <fullName>IS_MANDATORY__c</fullName>
    <description>IS_MANDATORY</description>
    <externalDeveloperName>IS_MANDATORY</externalDeveloperName>
    <label>IS_MANDATORY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>