LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/PAR_AID__c.field-meta.xml
<CustomField>
    <fullName>PAR_AID__c</fullName>
    <description>PAR_AID</description>
    <externalDeveloperName>PAR_AID</externalDeveloperName>
    <label>PAR_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>