LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/PARA_DESC__c.field-meta.xml
<CustomField>
    <fullName>PARA_DESC__c</fullName>
    <description>PARA_DESC</description>
    <externalDeveloperName>PARA_DESC</externalDeveloperName>
    <label>PARA_DESC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>