LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/PARA_MID__c.field-meta.xml
<CustomField>
    <fullName>PARA_MID__c</fullName>
    <description>PARA_MID</description>
    <externalDeveloperName>PARA_MID</externalDeveloperName>
    <label>PARA_MID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>