LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETERS__x/fields/UP_DATE__c.field-meta.xml
<CustomField>
    <fullName>UP_DATE__c</fullName>
    <description>UP_DATE</description>
    <externalDeveloperName>UP_DATE</externalDeveloperName>
    <label>UP_DATE</label>
    <type>DateTime</type>
</CustomField>